--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 /*
  * Write CSS code in this file.
  */
+
+ /* first page for css */
+
+/* it will be main page for seaching food ... */
+
+
+/* second page for css */
