--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header{
   position: relative;
 }
 header a{
-  margin-left: 10px;
+  font-size: 50px;
   color: white;
   text-decoration: none;
 }
@@ -36,13 +36,13 @@ header a{
    font-size: 17px;
    border: 1px solid grey;
    float: left;
-   width: 80%;
+   width: 90%;
    background: #f1f1f1;
  }
 
  form.Search-Food button {
    float: left;
-   width: 20%;
+   width: 10%;
    padding: 10px;
    background: #2196F3;
    color: white;
