--- a/style.css
+++ b/style.css
@@ -6,13 +6,19 @@
 
 /* Main Title */
 /* Still fixing... */
+
 header{
-  font-family: sans-serif;
-  background-color: Orange;
+  font-family: 'Open+snas', sans-serif;
+  background-color: #d73f09;
   box-sizing: border-box;
   display: flex;
   align-items: center;
   position: relative;
+  height: 180px;
+  padding-left: 45%;
+  padding-right: 45%;
+  font-weight: 400;
+  line-height: 1.5;
 }
 header a{
   font-size: 50px;
@@ -22,8 +28,6 @@ header a{
 }
 
 /* END OF Main Title*/
-
-
 /* Start Search Bar */
 
 body {
@@ -47,7 +51,8 @@ form.Search-Food button {
   float: left;
   width: 10%;
   padding: 10px;
-  background: #2196F3;
+  background:#d73f09;
+;
   color: white;
   font-size: 17px;
   border: 1px solid grey;
@@ -56,7 +61,7 @@ form.Search-Food button {
 }
 
 form.Search-Food button:hover {
-  background: #0b7dda;
+  background: Black;
 }
 
 form.Search-Food::after {
@@ -64,7 +69,6 @@ form.Search-Food::after {
   clear: both;
   display: table;
 }
-
 /* END OF Search Bar */
 
 /* Item Listing */
