--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header a{
   font-family: 'Kaushan Script', cursive;
 }
 #title-recipes {
-  font-family: 'Bebas Neue', sans-serif;
+  font-family: 'Alatsi', sans-serif;
 }
 
 /* END OF Main Title*/
