dynamic search bar
Need to fix but temporary bar

--- a/style.css
+++ b/style.css
@@ -42,17 +42,71 @@ body {
 * {
   box-sizing: border-box;
 }
+/* Search box */
+/* form.Search-Food input[type=text] {
 
-form.Search-Food input[type=text] {
-  /*  */
   padding: 10px;
   font-size: 17px;
   border: 1px solid grey;
   float: left;
   width: 90%;
   background: #f1f1f1;
+} */
+/* start of dynamic search bar */
+.searchbox{
+  width: 90%;
+  margin: 10px auto;
 }
-
+.header{
+  background: #ECDFBF;
+  overflow: hidden;
+  padding: 20px;
+  text-align: center;
+}
+.header h1{
+  text-transform: uppercase;
+  color: white;
+  margin: 0;
+  margin-bottom: 8px;
+}
+#value{
+  border: none;
+  background: #E0D3B6;
+  padding: 6px;
+  font-size: 18px;
+  width: 80%;
+  border-radius: 6px;
+  color: white;
+}
+#value:focus{
+  outline: none;
+}
+.container{
+  background: #FFFFF5;
+  padding: 1%;
+}
+.item{
+  /* margin: 3% 0px; */
+  display: flex;
+  align-items: center;
+}
+.icon{
+  width: 25px;
+  height: 25px;
+  background: #E0D3B6;
+  color: white;
+  font-size: 15px;
+  text-align: center;
+  line-height: 25px;
+  border-radius: 50%;
+  margin-right: 8px;
+}
+.name{
+  font-size: 17px;
+  font-weight: 470;
+  color: #333;
+}
+/* END of dynamic search bar */
 form.Search-Food button {
   float: left;
   width: 10%;
@@ -83,8 +137,8 @@ form.Search-Food::after {
   display: inline-block;
   position: relative;
   vertical-align: top;
-  height: 300px;
-  width: 300px;
+  /* height: 300px;
+  width: 300px; */
   margin: 0;
   padding: 0;
 }
@@ -104,7 +158,7 @@ form.Search-Food::after {
 .item-image-container img{
   height: 300px;
   width: 300px;
-} 
+}
 
 .item-title{
   position: absolute;
