--- a/style.css
+++ b/style.css
@@ -195,4 +195,125 @@ a {
 /* it will be main page for seaching food ... */
 
 
+
+/* Start of Button to Add Post of Recipe */
+#add-recipe-button {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  height: 60px;
+  width: 60px;
+  border: none;
+  font-size: 36px;
+  background-color: #FFFFFF;
+  color: #FF8000;
+  cursor: pointer;
+}
+
+#add-recipe-button:hover,
+#add-recipe-button:focus {
+  right: 27px;
+  bottom: 27px;
+  height: 66px;
+  width: 66px;
+  border-radius: 33px;
+  font-size: 40px;
+}
+
+#add-recipe-button:focus {
+  outline: none;
+}
+
+#modal-add-recipe-backdrop {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.85);
+}
+
+#add-recipe-modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1010;
+  overflow: scroll;
+}
+
+.hidden {
+  display: none;
+}
+
+.modal-add-recipe-dialog {
+  width: auto;
+  max-width: 600px;
+  min-width: 350px;
+  min-height: 300px;
+  margin: 40px auto;
+  background-color: #B3B3B3;
+  border-radius: 15px;
+}
+
+.modal-add-recipe-header {
+  position: relative;
+  padding: 10px 20px;
+}
+
+.modal-add-recipe-header h3 {
+  margin: 0;
+  font-size: 28px;
+}
+
+#modal-add-recipe-close {
+  position: absolute;
+  right: 10px;
+  top: 5px;
+  font-size: 24px;
+  border: none;
+  background: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.modal-add-recipe-body {
+  padding: 20px;
+}
+
+.recipe-input-element {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  margin: 10px 0;
+}
+
+.recipe-input-element > label {
+  font-weight: 600;
+  flex: 1 75px;
+  margin-right: 10px;
+}
+
+.recipe-input-element input {
+  flex: 6 200px;
+  padding: 8px;
+  font-size: 20px;
+  border: 1px solid #aaa;
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px 10px 20px 10px;
+}
+
+#modal-cancel,
+#modal-add {
+  margin-right: 20px;
+}
+/* End of Button to Add Post of Recipe */
+
+
 /* second page for css */
