--- a/style.css
+++ b/style.css
@@ -53,24 +53,17 @@ body {
 /* start of dynamic search bar */
 .searchbox{
   /* width: 90%; */
-  margin: 0px;
+  /* margin: 0px; */
 }
 .header{
   background: #FF8000;
-  overflow: hidden;
-  padding-left: 34%;
-  /* padding: 50px; */
+  /* overflow: hidden; */
+  padding-left: 30%;
   text-align: center;
   height: 150px;
   display: flex;
   align-items: center;
   position: relative;
-}
-.header h1{
-  text-transform: uppercase;
-  color: white;
-  margin: 0;
-  margin-bottom: 8px;
 }
 #value{
   border-color: #FFFFFF;
@@ -79,7 +72,7 @@ body {
   background: #FF8000;
   padding: 6px 6px 6px 12px;
   font-size: 20px;
-  width: 50%;
+  width: 58%;
   height: 60px;
   color: white;
 }
@@ -100,46 +93,50 @@ body {
   background: none;
 }
 #filter-button:hover {
-  font-size: 26px;
-  right: 51px;
+  color: #333333;
 }
 aside {
   background: #FF8000;
-  width: 33%;
+  width: 40.5%;
   height: 100px;
   padding: 5px;
   text-align: center;
   display: flex;
   align-items: center;
   position: relative;
-  left: 34%;
+  left: 30%;
   bottom: 45px;
+
 }
 .filter-input-container {
-  /* float: left; */
-  /* align-items: center; */
-  /* padding-left: 2%; */
-  margin: 2%;
+  padding-left: 4%;
+  float: left;
+  box-sizing: border-box;
 }
 .filter-input-element {
+
   /* padding-left: 30px; */
   /* padding-right: 4%; */
 }
 #bookmark-button {
   width: 100%;
-  border: none;
-  font-size: 36px;
+  border: 0;
+  outline: 0;
+  font-size: 30px;
   background-color: #FF8000;
-  color: #FFD966;
+  color: #FFFF00;
   cursor: pointer;
 }
+#bookmark-button:hover {
+  color: #FFFF99;
+}
 #filter-categories {
-  width: 130px;
-  height: 36px;
+  width: 100%;
+  height: 30px;
 }
 #filter-text-ingredients {
   width: 100%;
-  height: 36px;
+  height: 30px;
 }
 
 .container{
