--- a/style.css
+++ b/style.css
@@ -379,6 +379,10 @@ a {
   background: none;
   padding: 0;
   cursor: pointer;
+  outline: 0;
+}
+#modal-add-recipe-close:hover {
+  color: #4D4D4D;
 }
 
 .modal-add-recipe-body {
@@ -423,6 +427,7 @@ a {
   font-size: 18px;
   border: 1px solid #aaa;
   border-radius: 8px;
+  outline: 0;
 }
 
 #modal-cancel {
