--- a/public/style.css
+++ b/public/style.css
@@ -51,11 +51,7 @@ body {
   background: #f1f1f1;
 } */
 /* start of dynamic search bar */
-.searchbox{
-  /* width: 90%; */
-  /* margin: 0px; */
-}
-.header{
+.searchbar {
   background: #FF8000;
   /* overflow: hidden; */
   padding-left: 30%;
@@ -65,7 +61,7 @@ body {
   align-items: center;
   position: relative;
 }
-#value{
+#searchbar-input{
   border-color: #FFFFFF;
   border-style: solid;
   border-width: thick;
@@ -76,13 +72,13 @@ body {
   height: 60px;
   color: white;
 }
-#value:focus{
+#searchbar-input:focus{
   outline: none;
 }
-#value::placeholder {
+#searchbar-input::placeholder {
   color: #FFFFFF;
 }
-#filter-button {
+#filterbar-button {
   position: relative;
   right: 50px;
   color: black;
@@ -92,7 +88,7 @@ body {
   width: 49px;
   background: none;
 }
-#filter-button:hover {
+#filterbar-button:hover {
   color: #333333;
 }
 aside {
@@ -106,6 +102,7 @@ aside {
   position: relative;
   left: 30%;
   bottom: 45px;
+  /* visibility: hidden; */
 
 }
 .filter-input-container {
@@ -165,7 +162,7 @@ aside {
   color: #333;
 }
 /* END of dynamic search bar */
-form.Search-Food button {
+/* form.Search-Food button {
   float: left;
   width: 10%;
   padding: 10px;
@@ -186,7 +183,7 @@ form.Search-Food::after {
   content: "";
   clear: both;
   display: table;
-}
+} */
 /* END OF Search Bar */
 
 /* Item Listing */
