Layout file Active

--- a/views/itemPage.handlebars
+++ b/views/itemPage.handlebars
@@ -1,5 +1,5 @@
-    <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!DOCTYPE html>
+<!-- <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>GoBeav Recipes</title>
@@ -12,14 +12,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.4.2/handlebars.runtime.js"></script>
     <script src="/index.js" charset="utf-8" defer></script>
 
-  </head>
+  </head> -->
   <body>
-    <header>
+    <!-- <header>
       <h1 class="site-title">
         <a href="#" id="title-goBeav">GoBeav</a>
         <a href="#" id="title-recipes">RECIPES</a>
       </h1>
-    </header>
+    </header> -->
 
     <main class="content">
 
