--- a/views/itemPage.handlebars
+++ b/views/itemPage.handlebars
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<!-- <html lang="en" dir="ltr">
+    <!DOCTYPE html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>GoBeav Recipes</title>
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.4.2/handlebars.runtime.js"></script>
     <script src="/index.js" charset="utf-8" defer></script>
 
-  </head> -->
+  </head>
   <body>
     <!-- <header>
       <h1 class="site-title">
@@ -24,12 +24,33 @@
     <main class="content">
 
       <!--Search Bar -->
-      <form class="search">
-        <div class="searchbar">
-          <input type="text" id="searchbar-input" placeholder="Find a recipe..">
-          <button type="submit" id="filterbar-button"><i class="fa fa-bars"></i></button>
-        </div>
+      <form class="Search-Food">
+        <!-- need to make (action="/action_page.php") -->
+        <!-- <input type="text" placeholder="Search.." name="search"> -->
+        <!-- inside search box -->
+
+
+        <!-- dynamic search bar in here -->
+           <div class="searchbox">
+              <div class="header">
+                <input onkeyup="searchbox_filter()" type="text" id="value" placeholder="Find a recipe..">
+                <button type="submit" id="filter-button"><i class="fa fa-align-justify"></i></button>
+              </div>
+              <!-- <div class="container">
+
+                      <div class="item">
+                        <span class="icon">A</span>
+                        <span class="name">Apple</span>
+                      </div>
+                  </div> -->
+
+
+              <!-- need it fill with photo container? -->
+            </div>
+        <!-- dynamic search bar end here -->
+
       </form>
+
 
       <!--Filter Search Bar-->
       <aside class="filter-container">
@@ -39,7 +60,7 @@
         <div class="filter-input-container">
           <div class="filter-input-element">
             <select id="filter-categories" class="filter-input" name="filter-categories">
-              <option selected value="">Categories</option>
+              <option selected value="">Any</option>
               <option>Asian</option>
               <option>American</option>
               <option>Italian</option>
