--- a/views/itemPage.handlebars
+++ b/views/itemPage.handlebars
@@ -34,7 +34,7 @@
            <div class="searchbox">
               <div class="header">
                 <input onkeyup="searchbox_filter()" type="text" id="value" placeholder="Find a recipe..">
-                <button type="submit" id="filter-button"><i class="fa fa-align-justify"></i></button>
+                <button type="submit" id="filter-button"><i class="fas fa-bars"></i></button>
               </div>
               <!-- <div class="container">
 
@@ -54,6 +54,7 @@
 
       <!--Filter Search Bar-->
       <aside class="filter-container">
+        <span class="close">&times;</span>
         <div class="filter-input-container">
           <button type="button" id="bookmark-button"><i class="fas fa-star"></i></button>
         </div>
