--- a/public/style.css
+++ b/public/style.css
@@ -106,10 +106,10 @@ aside {
   position: relative;
   left: 30%;
   bottom: 45px;
-
+  /* visibility: hidden; */
 }
 .filter-input-container {
-  padding-left: 4%;
+  padding-left: 7%;
   float: left;
   box-sizing: border-box;
 }
@@ -131,7 +131,7 @@ aside {
   color: #FFFF99;
 }
 #filter-categories {
-  width: 100%;
+  width: 130px;
   height: 30px;
 }
 #filter-text-ingredients {
@@ -165,7 +165,7 @@ aside {
   color: #333;
 }
 /* END of dynamic search bar */
-form.Search-Food button {
+/* form.Search-Food button {
   float: left;
   width: 10%;
   padding: 10px;
@@ -186,7 +186,7 @@ form.Search-Food::after {
   content: "";
   clear: both;
   display: table;
-}
+} */
 /* END OF Search Bar */
 
 /* Item Listing */
