--- a/views/partials/modal.handlebars
+++ b/views/partials/modal.handlebars
@@ -23,7 +23,13 @@
 
       <div class="recipe-input-element">
         <label for="recipe-categories-input">Categories</label>
-        <input type="text" id="recipe-categories-input" placeholder="Categories  ex)Asian, American, Italian, etc.">
+        <!--<input type="text" id="recipe-categories-input" placeholder="Categories  ex)Asian, American, Italian, etc.">-->
+        <select id="recipe-categories-input">
+          <option>Asian</option>
+          <option>American</option>
+          <option>Italian</option>
+          <option>Mexican</option>
+        </select>
       </div>
 
     </div>
