--- a/views/partials/item.handlebars
+++ b/views/partials/item.handlebars
@@ -1,7 +1,7 @@
 <div class="item" data-bookmark="{{BOOKMARK}}" data-categories="{{CATEGORIES}}" data-ingredients="{{INGREDIENTS}}">
     <div class="item-contents">
         <div class="item-image-container">
-            <a href="#"><img src="{{IMG_URL}}" alt="{{CAPTION}}"></a>
+            <a href="{{CAPTION}}"><img src="{{IMG_URL}}" alt="{{CAPTION}}"></a>
         </div>
         <div class="item-info-container">
             <span class="item-title">{{CAPTION}}</span>
