--- a/views/recipePage.handlebars
+++ b/views/recipePage.handlebars
@@ -1,61 +1,65 @@
 <section class="recipe-full-page">
   <!-- recipe name -->
   <div class="recipe-name-container">
-    <span class="recipe-name">{{NAME}}</span>
+    <span class="recipe-name">Bibimbap</span>
   </div>
   <!-- ingredients -->
+      <span class="ingredients-title">Ingredients</span>
   <div class="recipe-ingredients-container">
-    <span>Ingredients</span>
+
     <div class="ingredients-element">
-      <label class="ingredients-checklist">
+      <div class="ingredients-checklist">
         <button type="button" id="minus-ingredient" class="fas fa-minus-circle"></button>
         <span>1 English cucumber, cut into matchsticks</span>
         <button type="button" id="plus-ingredient" class="fas fa-plus-circle"></button>
-      </label>
+      </div>
+    </div>
+    <!-- recipe image -->
+    <div class="recipe-image-container">
+      <a href="#"><img src="http://www.kongsim.co.kr/upload/menu_01/2017_02_22/hero_ljtdP_2017_02_22_15_50_30.jpg"></a>
     </div>
   </div>
-  <!-- recipe image -->
-  <div class="recipe-image-container">
-    <a href="#"><img src="{{IMG_URL}}"></a>
-  </div>
+
   <!-- recipe toolbar -->
   <div class="recipe-toolbar-container">
-    <section class="recipe-navbar">
-      <a href class="icon-on-click">
-        <span class="recipe-navbar-icon" id="bookmark-icon"></span>
-        <span>Bookmark</span>
-      </a>
-      <a href class="icon-on-click">
-        <span class="recipe-navbar-icon" id="print-icon"></span>
-        <span>Print</span>
-      </a>
-      <a href class="icon-on-click">
-        <span class="recipe-navbar-icon" id="copyURL-icon"></span>
-        <span>Copy URL</span>
-      </a>
-      <a href class="icon-on-click">
-        <span class="recipe-navbar-icon" id="googleDrive-icon"></span>
-        <span>Google Drive</span>
-      </a>
-      <a href class="icon-on-click">
-        <span class="recipe-navbar-icon" id="instagram-icon"></span>
-        <span>Instagram</span>
-      </a>
-      <a href class="icon-on-click">
-        <span class="recipe-navbar-icon" id="Facebook-icon"></span>
-        <span>Facebook</span>
-      </a>
-    </section>
+    <nav class="recipe-navbar">
+      <ul class="recipe-navlist">
+        <li class="recipe-navitem">
+          <span class="recipe-navbar-icon" id="bookmark-icon"></span>
+          <span>Bookmark</span>
+        </li>
+        <li class="recipe-navitem">
+          <span class="recipe-navbar-icon" id="print-icon"></span>
+          <span>Print</span>
+        </li>
+        <li class="recipe-navitem">
+          <span class="recipe-navbar-icon" id="copyURL-icon"></span>
+          <span>Copy URL</span>
+        </li>
+        <li class="recipe-navitem">
+          <span class="recipe-navbar-icon" id="googleDrive-icon"></span>
+          <span>Google Drive</span>
+        </li>
+        <li class="recipe-navitem">
+          <span class="recipe-navbar-icon" id="instagram-icon"></span>
+          <span>Instagram</span>
+        </li>
+        <li class="recipe-navitem">
+          <span class="recipe-navbar-icon" id="Facebook-icon"></span>
+          <span>Facebook</span>
+        </li>
+      </ul>
+    </nav>
   </div>
   <!-- directions -->
   <div class="recipe-directions-container">
-    <span>directions</span>
+    <span class="directions-title">directions</span>
     <div class="directions-element">
-      <label class="directions-checklist">
+      <div class="directions-checklist">
         <button type="button" id="minus-direction" class="fas fa-minus-circle"></button>
         <span>Stir cucumber pieces with 1/4 cup gochujang paste in a bowl; set aside.</span>
         <button type="button" id="plus-direction" class="fas fa-plus-circle"></button>
-      </label>
+      </div>
     </div>
   </div>
 
