recipe now print image

--- a/views/recipePage.handlebars
+++ b/views/recipePage.handlebars
@@ -18,7 +18,7 @@
     </div>
     <!-- recipe image -->
     <div class="recipe-image-container">
-      <a href="#"><img src="http://www.kongsim.co.kr/upload/menu_01/2017_02_22/hero_ljtdP_2017_02_22_15_50_30.jpg"></a>
+      <a href="#"><img src="{{IMG_URL}}"></a>
     </div>
   </div>
 
