CSS JS SEARCH.HD
ss

--- a/public/style.css
+++ b/public/style.css
@@ -95,19 +95,66 @@ body {
 #filter-button:hover {
   color: #333333;
 }
-aside {
+
+
+/*13134234234234243*/
+
+/* The side navigation menu */
+.sidenav {
+  width: 0%; /* 100% Full-height */
+  height: 15%; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  /* z-index: 1; /* Stay on top */ */
+  background-color: #111; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 50px; /* Place content 60px from the top */
+  margin-left: 30%;
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.filter-container a {
+
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+  transition: margin-left .5s;
+  padding: 20px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+/*67567657567575*/
+
+ aside {
   background: #FF8000;
-  width: 40.5%;
-  height: 100px;
-  padding: 5px;
   text-align: center;
   display: flex;
   align-items: center;
   position: relative;
-  left: 30%;
-  bottom: 45px;
-  /* visibility: hidden; */
+  left: 0;
+  padding-bottom: 30px;
+  width: auto;
+  /* visibility: hidden;
 }
+
 .filter-input-container {
   padding-left: 7%;
   float: left;
@@ -119,24 +166,30 @@ aside {
   /* padding-right: 4%; */
 }
 #bookmark-button {
-  width: 100%;
+  width: 5%;
+  margin-right: 5%;
   border: 0;
   outline: 0;
   font-size: 30px;
   background-color: #FF8000;
   color: #FFFF00;
   cursor: pointer;
+  float: left;
 }
 #bookmark-button:hover {
   color: #FFFF99;
 }
 #filter-categories {
-  width: 130px;
+  width: 20%;
+  margin-right: 5%;
   height: 30px;
+
+  float: left;
 }
 #filter-text-ingredients {
-  width: 100%;
+  width: 40%;
   height: 30px;
+  float: left;
 }
 
 .container{
