--- a/views/recipePage.handlebars
+++ b/views/recipePage.handlebars
@@ -7,6 +7,9 @@
   </div>
   <!-- ingredients -->
       <span class="ingredients-title">Ingredients</span>
+      <!-- adding body recipe HY-->
+<div class= "body_recipe">
+
   <div class="recipe-ingredients-container">
 
     <div class="ingredients-element">
@@ -17,13 +20,17 @@
       </div>
     </div>
   </div>
+
     <!-- recipe image -->
     <div class="recipe-image-container">
       <a href="#"><img src="{{IMG_URL}}"></a>
     </div>
-  </div>
+  <!-- closing body recipe HY-->
+</div>
+
 
   <!-- recipe toolbar -->
+<div class = "middle_section">
   <div class="recipe-toolbar-container">
     <nav class="recipe-navbar">
       <ul class="recipe-navlist">
@@ -54,7 +61,11 @@
       </ul>
     </nav>
   </div>
+</div>
+
+<!-- bottom section start. -->
   <!-- directions -->
+<div class="bottom_section">
   <div class="recipe-directions-container">
     <span class="directions-title">directions</span>
     <div class="directions-element">
@@ -65,5 +76,6 @@
       </div>
     </div>
   </div>
+</div>
 
 </section>
