--- a/public/style.css
+++ b/public/style.css
@@ -104,7 +104,7 @@ body {
   width: 0%; /* 100% Full-height */
   height: 15%; /* 0 width - change this with JavaScript */
   position: fixed; /* Stay in place */
-  /* z-index: 1; /* Stay on top */ */
+  /* z-index: 1; /* Stay on top */
   background-color: #111; /* Black*/
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 50px; /* Place content 60px from the top */
@@ -296,9 +296,9 @@ form.Search-Food::after {
   bottom: 0px;
 }
 
-.item-button-container > .far {
+#bookmark {
   visibility: hidden;
-  /*border: none;*/
+  border: none;
   position: absolute;
   font-size: 1.5em;
   height: 100%;
@@ -310,9 +310,9 @@ form.Search-Food::after {
   cursor: pointer;
 }
 
-.item-button-container > .fas {
+#trash{
   visibility: hidden;
-  /*border: none;*/
+  border: none;
   position: absolute;
   font-size: 1.5em;
   height: 100%;
@@ -328,11 +328,11 @@ form.Search-Food::after {
   visibility: visible;
 }
 
-.item:hover .far {
+.item:hover #bookmark {
   visibility: visible;
 }
 
-.item:hover .fas {
+.item:hover #trash {
   visibility: visible;
 }
 
