--- a/views/partials/item.handlebars
+++ b/views/partials/item.handlebars
@@ -7,8 +7,8 @@
             <span class="item-title">{{CAPTION}}</span>
         </div>
         <div class="item-button-container">
-            <button type="button" class="far fa-star"></button>
-            <button type="button" class="fas fa-trash"></button>
+            <button type="button" id="bookmark" class="fa-star far"></button>
+            <button type="button" id="trash" class="fa-trash fas"></button>
         </div>
     </div>
 </div>
